--- a/wwwroot/admin/css/sb-admin-2.css
+++ b/wwwroot/admin/css/sb-admin-2.css
@@ -10705,9 +10705,9 @@ a:focus {
   color: #fff;
 }
 
-.sidebar-dark .nav-item .nav-link[data-toggle="collapse"]::after {
-  color: rgba(255, 255, 255, 0.5);
-}
+    .sidebar-dark .nav-item .nav-link[data-toggle="collapse"]::after {
+        color: rgb(61 125 184 / 50%);
+    }
 
 .sidebar-dark .nav-item.active .nav-link {
   color: #fff;
