--- a/Areas/Admin/Pages/Role/User.cshtml
+++ b/Areas/Admin/Pages/Role/User.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "DANH SÁCH NGƯỜI DÙNG";
 }
 
-
+<div class="container">
 <h4>@ViewData["Title"]</h4>
 <partial name="_StatusMessage" model="@Model.StatusMessage" />
-
 <table class="table table-striped">
     <tr>
         <th>UserName</th>
@@ -42,7 +41,7 @@
 
     }
 </table>
-
+<</div>
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
