--- a/Areas/Admin/Views/BangGia/Add.cshtml
+++ b/Areas/Admin/Views/BangGia/Add.cshtml
@@ -1,43 +1,47 @@
 ﻿@model NhaKhoaQuangVu.Models.BangGia
 @using Microsoft.AspNetCore.Mvc.Rendering
 @{
-    ViewData["Title"] = "Add Dịch Vụ";
+    ViewData["Title"] = "Thêm Dịch Vụ";
 }
+<div class="container">
+
 <h2>Thêm dịch vụ</h2>
-<div class="row">
-    <div class="col-md-6">
-        <form asp-action="Add" method="post" enctype="multipart/form-data">
-            <div class="form-group">
-                <label asp-for="TenDichVu">Tên Dịch Vụ</label>
-                <input asp-for="TenDichVu" class="form-control" />
-                <span asp-validation-for="TenDichVu" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="GiaDichVu">Giá Dịch Vụ</label>
-                <input asp-for="GiaDichVu" class="form-control" />
-                <span asp-validation-for="GiaDichVu" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="MoTa">Mô tả Dịch Vụ</label>
-                <textarea asp-for="MoTa" class="form-control"></textarea>
-                <span asp-validation-for="MoTa" class="text-danger"></span>
+    <div class="row">
+        <div class="col-md-6">
+            <form asp-action="Add" method="post" enctype="multipart/form-data">
+                <div class="form-group">
+                    <label asp-for="TenDichVu">Tên Dịch Vụ</label>
+                    <input asp-for="TenDichVu" class="form-control" />
+                    <span asp-validation-for="TenDichVu" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="GiaDichVu">Giá Dịch Vụ</label>
+                    <input asp-for="GiaDichVu" class="form-control" />
+                    <span asp-validation-for="GiaDichVu" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="MoTa">Mô tả Dịch Vụ</label>
+                    <textarea asp-for="MoTa" class="form-control"></textarea>
+                    <span asp-validation-for="MoTa" class="text-danger"></span>
 
-            </div>
-            <br />
-            <div class="form-group">
-                <label asp-for="ChiTiet">Chi Tiết Dịch Vụ</label>
-                <textarea asp-for="ChiTiet" class="form-control"></textarea>
-                <span asp-validation-for="ChiTiet" class="text-danger"></span>
+                </div>
+                <br />
+                <div class="form-group">
+                    <label asp-for="ChiTiet">Chi Tiết Dịch Vụ</label>
+                    <textarea asp-for="ChiTiet" class="form-control"></textarea>
+                    <span asp-validation-for="ChiTiet" class="text-danger"></span>
 
-            </div>
-            <br />
-            <button type="submit" class="btn btn-primary">Add</button>
-            <a class="btn btn-secondary" onclick="history.back()">Cancel</a>
+                </div>
+                <br />
+                <button type="submit" class="btn btn-primary">Thêm Dịch Vụ</button>
+                <a class="btn btn-secondary" onclick="history.back()">Huỷ</a>
 
 
-        </form>
+            </form>
+        </div>
     </div>
 </div>
+
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
