--- a/Areas/Admin/Views/BangGia/Delete.cshtml
+++ b/Areas/Admin/Views/BangGia/Delete.cshtml
@@ -1,7 +1,9 @@
 ﻿@model NhaKhoaQuangVu.Models.BangGia
-</br>
-<h2>Xác nhận Xoá Dịch Vụ</h2>
-</br>
+
+<div class="container">
+    </br>
+    <h2>Xác nhận Xoá Dịch Vụ</h2>
+    </br>
 @using (Html.BeginForm("DeleteConfirmed", "BangGia", FormMethod.Post, new { area = "Admin" }))
 {
     @Html.AntiForgeryToken()
@@ -12,6 +14,8 @@
     <a class="btn btn-secondary" onclick="history.back()">Cancel</a>
 
 }
+</div>
+
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
