--- a/Areas/Admin/Views/BangGia/Update.cshtml
+++ b/Areas/Admin/Views/BangGia/Update.cshtml
@@ -3,43 +3,49 @@
 @{
     ViewData["Title"] = "Edit Product";
 }
-<h2>Edit Dịch Vụ</h2>
-<div class="row">
-    <div class="col-md-6">
-        <form asp-action="Update" method="post" enctype="multipart/form-data">
-            <input type="hidden" asp-for="MaDichVu" />
-            <div class="form-group">
-                <label asp-for="TenDichVu">Tên dịch vụ</label>
-                <input asp-for="TenDichVu" class="form-control" />
-                <span asp-validation-for="TenDichVu" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="GiaDichVu">Giá dịch vụ</label>
-                <input asp-for="GiaDichVu" class="form-control" />
-                <span asp-validation-for="GiaDichVu" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="MoTa">Mô Tả</label>
-            <textarea asp-for="MoTa" class="form-control"></textarea>
 
-                <span asp-validation-for="MoTa" class="text-danger"></span>
+<div class="container">
+    <br>
+    <h2>Edit Dịch Vụ</h2>
+    </br>
+    <div class="row">
+        <div class="col-md-6">
+            <form asp-action="Update" method="post" enctype="multipart/form-data">
+                <input type="hidden" asp-for="MaDichVu" />
+                <div class="form-group">
+                    <label asp-for="TenDichVu">Tên dịch vụ</label>
+                    <input asp-for="TenDichVu" class="form-control" />
+                    <span asp-validation-for="TenDichVu" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="GiaDichVu">Giá dịch vụ</label>
+                    <input asp-for="GiaDichVu" class="form-control" />
+                    <span asp-validation-for="GiaDichVu" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="MoTa">Mô Tả</label>
+                <textarea asp-for="MoTa" class="form-control"></textarea>
 
-            </div>
-            <br />
-            <div class="form-group">
-                <label asp-for="ChiTiet">Chi Tiết Dịch Vụ</label>
-                <textarea asp-for="ChiTiet" class="form-control"></textarea>
+                    <span asp-validation-for="MoTa" class="text-danger"></span>
 
-                <span asp-validation-for="ChiTiet" class="text-danger"></span>
+                </div>
+                <br />
+                <div class="form-group">
+                    <label asp-for="ChiTiet">Chi Tiết Dịch Vụ</label>
+                    <textarea asp-for="ChiTiet" class="form-control"></textarea>
 
-            </div>
-            <br />
-            <button type="submit" class="btn btn-primary">Update</button>
-            <a class="btn btn-secondary" onclick="history.back()">Cancel</a>
+                    <span asp-validation-for="ChiTiet" class="text-danger"></span>
 
-        </form>
+                </div>
+                <br />
+                <button type="submit" class="btn btn-primary">Update</button>
+                <a class="btn btn-secondary" onclick="history.back()">Cancel</a>
+
+            </form>
+        </div>
     </div>
 </div>
+
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
