--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -18,7 +18,8 @@
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
           rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
     <!-- Custom styles for this template-->
     <link href="~/admin/css/sb-admin-2.min.css" rel="stylesheet">
 
@@ -51,7 +52,7 @@
 
             <!-- Heading -->
             <div class="sidebar-heading">
-                Interface
+                
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
@@ -60,13 +61,14 @@
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
                    aria-expanded="true" aria-controls="collapseUtilities">
-                    <i class="fa-light fa-briefcase"></i>
+                    <i class="fa-solid fa-user"></i>
+
                     <span>Quản lý dịch vụ</span>
                 </a>
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                      data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Utilities:</h6>
+                        <h6 class="collapse-header">Mục Quản Lý:</h6>
                         <a class="collapse-item" href="/Admin/BangGia/Index">Quản Lý Dịch Vụ</a>
                         <a class="collapse-item" href="/Employee/LichHen">Quản Lý Lịch Hẹn</a>
                
@@ -86,17 +88,15 @@
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
                    aria-expanded="true" aria-controls="collapsePages">
-                    <i class="fa-regular fa-user"></i>
+                    <i class="fa-solid fa-list"></i>
                     <span>Phân Quyền Người Dùng</span>
                 </a>
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Login Screens:</h6>
 
                         <a class="collapse-item" href="/Admin/Roles/">Quản Lý Chức Năng</a>
                         <a class="collapse-item" href="/Admin/role/Users/">Quản Lý Người Dùng</a>
-@*                        <a class="collapse-item" href="/Admin/role/Employee/">Quản Lý Nhân Viên</a>
-*@                        <div class="collapse-divider"></div>
+                       <div class="collapse-divider"></div>
 
 
                     </div>
@@ -127,7 +127,7 @@
                     </button>
 
                     <!-- Topbar Search -->
-                    <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+                    @* <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
                         <div class="input-group">
                             <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
                                    aria-label="Search" aria-describedby="basic-addon2">
@@ -137,13 +137,13 @@
                                 </button>
                             </div>
                         </div>
-                    </form>
+                    </form> *@
 
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
 
                         <!-- Nav Item - Search Dropdown (Visible Only XS) -->
-                        <li class="nav-item dropdown no-arrow d-sm-none">
+                       @*  <li class="nav-item dropdown no-arrow d-sm-none">
                             <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button"
                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="fas fa-search fa-fw"></i>
@@ -164,7 +164,7 @@
                                     </div>
                                 </form>
                             </div>
-                        </li>
+                        </li> *@
 
                         <!-- Nav Item - Alerts -->
                        
@@ -191,17 +191,17 @@
                                 </a>
                             </div>
                         </li>
-
+                       
                     </ul>
-
+                    
                 </nav>
                 <!-- End of Topbar -->
                 <!-- Begin Page Content -->
-
+                @RenderBody()
 
             </div>
             <!-- End of Main Content -->
-            @RenderBody()
+            
             <!-- Footer -->
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
