--- a/Areas/Employee/Views/LichHen/Index.cshtml
+++ b/Areas/Employee/Views/LichHen/Index.cshtml
@@ -101,7 +101,7 @@
     }
 
     .btn-rounded {
-        border-radius: 20px; /* Điều chỉnh giá trị này để thay đổi độ cong của nút */
+        border-radius: 20px;
     }
 
     .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
@@ -121,8 +121,8 @@
                 Bạn có muốn nhận tư vấn cho lịch hẹn này ?
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="cancelConfirmationModal()">Thôi em ngại</button>
-                <a id="confirmButton" class="btn btn-primary">Làm luôn cho nóng đê</a>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="cancelConfirmationModal()">Huỷ</button>
+                <a id="confirmButton" class="btn btn-primary">Chắc chắn</a>
             </div>
         </div>
     </div>
@@ -182,7 +182,7 @@
         <table class="table table-striped" id="appointmentsTable">
             <thead>
                 <tr>
-                    <th>ID</th>
+                    <th>Mã Lịch Hẹn</th>
                     <th>Tên Khách Hàng</th>
                     <th>Số Điện Thoại</th>
                     <th>Ngày Hẹn</th>
@@ -196,7 +196,7 @@
                 {
                     <tr data-status="@datHen.TrangThai">
                         <td>@datHen.Id</td>
-                        <td class="@GetTextColorClass(datHen.TrangThai)"><strong><em>@datHen.HoTen.ToUpper()</em></strong></td>
+                        <td><strong><em>@datHen.HoTen.ToUpper()</em></strong></td>
                         <td>@datHen.SDT</td>
                         <td>@datHen.NgayHen.ToString("dd/MM/yyyy")</td>
                         <td>@datHen.GioHen</td>
