--- a/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -36,7 +36,7 @@
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/Home/Index">
                 <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fas fa-laugh-wink"></i>
+                    <i class="fa-solid fa-tooth"></i>
                 </div>
                 <div class="sidebar-brand-text mx-4">Nha Khoa Quang Vũ</div>
             </a>
@@ -65,7 +65,6 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Chức năng</h6>
                         <a class="collapse-item @ManageNavPages.IndexNavClass(ViewContext)" asp-area="Identity" asp-page="/Account/Manage/Index">Hồ Sơ</a>
-                        <a class="collapse-item @ManageNavPages.EmailNavClass(ViewContext)" asp-area="Identity" asp-page="/Account/Manage/Email">Email</a>
                         <a class="collapse-item @ManageNavPages.ChangePasswordNavClass(ViewContext)" asp-area="Identity" asp-page="/Account/Manage/ChangePassword">Mật Khẩu</a>
                         <a class="collapse-item @ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)" asp-area="Identity" asp-page="/Account/Manage/TwoFactorAuthentication">Bảo Mật Hai Lớp</a>
                         <a class="collapse-item @ManageNavPages.PersonalDataNavClass(ViewContext)" asp-area="Identity" asp-page="/Account/Manage/PersonalData">Dữ Liệu Cá Nhân</a>
@@ -175,10 +174,11 @@
 
                 </nav>
                 <!-- End of Topbar -->
+                @RenderBody()
+
                 <!-- Begin Page Content -->
             </div>
             <!-- End of Main Content -->
-            @RenderBody()
             <!-- Footer -->
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
